--- a/index.css
+++ b/index.css
@@ -53,8 +53,8 @@ header {
 }
 
 .btn {
-    width: 500px;
-    height: 100px;
+    width: 400px;
+    height: 60px;
     text-transform: uppercase;
     color: white;
     background-color: #1e4a69;
@@ -62,7 +62,7 @@ header {
     outline: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
-    font-size: 50px;
+    font-size: 40px;
     font-family: Montserrat Alternates;
     font-weight: 500;
     transition: all 0.2s cubic-bezier(0.4, 0, 1, 1);
@@ -76,7 +76,7 @@ header {
 
 .text-box {
     width: 600px;
-    height: 600px;
+    height: 250px;
     padding: 10px;
     resize: none;
     border: none;
@@ -87,4 +87,24 @@ header {
     background-color: #1e4a69;
     border-radius: 16px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.image-box {
+    background-color: white
+}
+
+.page__text, .page__image {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.btn__image {
+    background-color: #7db3da;
+    color: black;
+}
+
+.btn__image:focus, .btn__image:hover {
+    background-color: #1e4a69;
+    color: white;
 }
